--- a/src/pages/slovenia/sday4.astro
+++ b/src/pages/slovenia/sday4.astro
@@ -24,24 +24,40 @@ Difficulty: medium low
 <br>
 <a href=https://www.strava.com/activities/14433545915>Link to workout in Strava</a>
 <hr>
-<a href="https://photos.app.goo.gl/n64phYFmB4n9dg3Y6">Link to photo gallery from this trip</a> - sorry, I won't be able to link individual photos in these posts!
-<hr>
 <p>
-Had quite an early morning wakeup call after a late night, but we got up quickly, and packed with minimum fuss, rolled to early train with plenty of time to spare. Got first breakfast at bakery that happened to be unexpectedly open as we passed on the way to the station.  Would have been a donut shop in the US but this place had sausage rolls and burek and croissants and coffee.
+<a href=https://q42.me/trips/slovenia/day4-summitfriends.jpg ><img src=https://q42.me/trips/slovenia/day4-summitfriends-small.jpg></a>
 <p>
-Caught a nice train for a 3 hour ride.  Transferring in the middle was quite a hassle dragging up and down stairs since the elevator at the station had an elevator too small for bikes! Due to the time it took to wrangle our loaded bikes down and back up onto the correct platform, we'd almost missed our connection which was leaving only a few minutes after we arrived - but Jeff was the hero, running up to the other platform and getting them to hold the train just for us.  It was a pretty empty train all the way to the end of the line where we got off.
+<i>Jeff and I just over the summit of today's big pass</i>
 <p>
-Had second breakfast in Kocevje; was a nice mini buffet.  Chatted for awhile with Clemon the owner about running a business and work life balance, then left Jeff watching his basketball game on his tablet while I put some effort into understanding, then adjusting my front rack to keep it off the fender whose pressing into the tire is what has been causing the rubbing yesterday and again today - slipped back into contact after getting abused up/down the train station stairs. 
+Had quite an early morning wakeup call after a late night of partying! But, we had steeled ourselves for this and prepped the night before, so got up quickly, and packed with minimum fuss, and then rolled to early train with plenty of time to spare. Even had time to get first breakfast at a bakery that happened to be unexpectedly open - at 5:45am - as we passed on the way to the station.  Would have been a donut shop in the US but this place had sausage rolls and burek and croissants and coffee.  Naturally I got a burek - I'd call it the country's donut, even though I guess it is more Balkan <a href="https://en.wikipedia.org/wiki/B%C3%B6rek">according to Wikipedia</a> - and then also got some other kind of pastry that I saved as a snack for later (ate on the train).  The chocolate milk was clutch, since there was a lack of milkshakes in this trip!
+<p>
+
+Caught one of the nicer trains and took a 3 hour ride. To be fair, all the trains we rode ended up being nice by US standards - always had a bathroom, electrical plugs on every seat, wifi (which I never got to work but that might be user error). Each car were a little bigger than a MAX train car in Portland. Each featured an on-board conductor; they were always 2 cars in length and never crowded. I said it was a nicer train - compared to an old slow single car more like a trolley that we'd seen go through the same station, the night before while getting tickets; we think that was a more local one.  However the trip was not without some struggle: transferring to a new (also nice) in the middle was quite a hassle - dragging our very heavy bike up and down stairs at the train station, since the elevator at the station had an elevator too small for bikes! Due to the time it took to wrangle our loaded bikes down and back up onto the correct platform (it was just the next one over - quite a lot of vertical distance for a 20' lateral move), we'd almost missed our connection!  That other train was scheduled to leave only a few minutes after we arrived (and we arrived a few minutes late) But, Jeff was the hero, running up to the other platform and getting them to hold the train just for us.  Thank goodness - next train was many hours away. Also nice for the train company to have...any...passengers: it was a nearly completely empty train all the way to the end of the line where we got off.  Maybe 2 other passengers got on in over an hour?
+<p>
+Had second breakfast in Kocevje; was a nice mini buffet at a hotel that Jeff had someone found.  Chatted for awhile with Clemon, the owner, about running a business and work-life balance, then left Jeff watching his basketball game on his tablet while I put some effort into understanding, then adjusting my front rack to keep it off the fender whose pressing into the tire is what has been causing a lot of rubbing yesterday and again today; it slipped back into contact after getting abused up/down the train station stairs. This failure feels not unreasonable to me, since it is held on by essentially tense fabric P clamps so it's a little bit of art rather than pure science how it is adjusted.  But after I really got everything tight, here, it did not budge for the rest of the trip!
 <p>
 Finally around 1030 we headed out of town onto less and less busy roads, always turning away from traffic and uphill;  we topped out at 3200 feet today and had a fair amount of climbing en route.  But oh how basically easy the ebikes made it!
 <p>
-In the end we reached the top of Strma Reber Pass , grades of up to 12  percent for quite awhile...would have been a real struggle likely with some pushing on a loaded analog touring bike (maybe could ride it unloaded, slowly?)...was better bombing down on the far side where grades exceeded 18% at times!  ZOOM ZOOM.
+<a href=https://q42.me/trips/slovenia/day4-woodman1.jpg ><img src=https://q42.me/trips/slovenia/day4-woodman1-small.jpg></a>
+<a href=https://q42.me/trips/slovenia/day4-woodman2.jpg ><img src=https://q42.me/trips/slovenia/day4-woodman2-small.jpg></a>
 <p>
-Pulled into the hotel and owner Simon and Jeff caught up and Simon insisted we drink some very herbal schnapps shots which we did before getting our tents set up and having a beer on the sunny patio.
+<i>En route we found this funky woodsman character on the ride and again at the hotel; we'd see a dozen or so before we left the area.<i>
 <p>
+In the end we reached the top of Strma Reber Pass - pictured at the top - which featured grades of up to 12 percent for quite awhile - probably 1000' consistent climbing.  It would have been a real struggle likely with some pushing on a loaded analog touring bike (maybe I could ride it unloaded, slowly?).  Was great fun though, bombing down on the far side where grades exceeded 18% at times!  ZOOM ZOOM.
+<p>
+<a href=https://q42.me/trips/slovenia/day4-patiofriends.jpg ><img src=https://q42.me/trips/slovenia/day4-patiofriends-small.jpg></a>
+<p>
+Pulled into the hotel and greeted the owner, Simon, who was at the front desk. Jeff caught up with him briefly and Simon insisted we drink some very herbal schnapps shots which we did before getting our tents set up and having a beer on the sunny patio.
+<p>
+<a href=https://q42.me/trips/slovenia/day4-sunset.jpg ><img src=https://q42.me/trips/slovenia/day4-sunset-small.jpg></a>
 We then sampled the pool/hot tub/sauna/showers, pretty amazing setup here and dozens of other folks were enjoying the saunas as well.  We killed a few hours before a very reasonably priced but very filling dinner - I had pasta carbonara and some squids stuffed with bacon and cheese, and a radler.  It was by this point 730pm or so but the sun was still filling the valley so we took our unloaded bikes on a 6mi ride up the valley - the opposite direction from where we are going tomorrow up the river valley that divides Croatia and Slovenia - we could have shouted over or thrown a rock at Croatia for most of the 6 miles!  Stopped at a scenic overlook that Jeff knew about to watch the sunset, then zoomed back into camp along with dusk.
 <p>
-It's pretty amazing country out here.  Excited to bike into Croatia tomorrow as our route along basically the only road zigzags over the (uncontrolled now that Croatia just joined the EU!) border for about 50 miles past some cool spots.
+<a href=https://q42.me/trips/slovenia/day4-croatia.jpg><img src=https://q42.me/trips/slovenia/day4-croatia-small.jpg></a>
+<i>Rode along the Croatian border on the sunset cruise.  Just some small bridges that were formerly patrolled but now uncontrolled international crossings, no big deal.</i>
+<a href=https://q42.me/trips/slovenia/day4-moonview.jpg><img src=https://q42.me/trips/slovenia/day4-moonview-small.jpg></a>
+<i>The moon was out while we sat on the deck</i>
+<p>
+It's pretty amazing country out here.  Excited to bike into Croatia tomorrow as our route along basically the only road zigzags over the (uncontrolled now that Croatia just joined the EU!) border, for about 50 miles, apparently past some cool spots.
 <p>
     </div>
 
