--- a/src/pages/slovenia/sday4.astro
+++ b/src/pages/slovenia/sday4.astro
@@ -41,7 +41,7 @@ Finally around 1030 we headed out of town onto less and less busy roads, always 
 <a href=https://q42.me/trips/slovenia/day4-woodman1.jpg ><img src=https://q42.me/trips/slovenia/day4-woodman1-small.jpg></a>
 <a href=https://q42.me/trips/slovenia/day4-woodman2.jpg ><img src=https://q42.me/trips/slovenia/day4-woodman2-small.jpg></a>
 <p>
-<i>En route we found this funky woodsman character on the ride and again at the hotel; we'd see a dozen or so before we left the area.<i>
+<i>En route we found this funky woodsman character on the ride and again at the hotel; we'd see a dozen or so before we left the area.</i>
 <p>
 In the end we reached the top of Strma Reber Pass - pictured at the top - which featured grades of up to 12 percent for quite awhile - probably 1000' consistent climbing.  It would have been a real struggle likely with some pushing on a loaded analog touring bike (maybe I could ride it unloaded, slowly?).  Was great fun though, bombing down on the far side where grades exceeded 18% at times!  ZOOM ZOOM.
 <p>
