--- a/src/pages/slovenia/sday5.astro
+++ b/src/pages/slovenia/sday5.astro
@@ -24,26 +24,52 @@ Difficulty: medium
 <br>
 <a href=https://www.strava.com/activities/14447315145>Link to workout in Strava</a>
 <hr>
-<a href="https://photos.app.goo.gl/n64phYFmB4n9dg3Y6">Link to photo gallery from this trip</a> - sorry, I won't be able to link individual photos in these posts!
-<hr>
 <p>
-Headed to bed pretty soon after we got back from the sunset bike ride, but there was quite a party going on at the hotel and the kids were singing in Croatian until 3am.  Nonetheless I slept pretty well in the much-repaired and falling apart tent that I borrowed from Jeff.  Definitely on its last legs, hence his having a new one for himself.  Much like the panniers I'm borrowing, he manages to use things far beyond their typical lifespan for which I applaud him, but I also worry that any of them may fail at any second, and that lack of trust gives me a good portion of the small stress that I experience on a vacation like this (which is comprised of almost entirely joy!)
+Headed to bed pretty soon after we got back from the sunset bike ride, but there was quite a party going on at the hotel and the kids were singing in Croatian until 3am.  Nonetheless I slept pretty well in the much-repaired and falling apart tent that I borrowed from Jeff.  Definitely on its last legs, hence his having a new one for himself.  Much like the panniers I'm borrowing, he manages to use things far beyond their typical lifespan for which I applaud him, but I also worry that any of them may fail at any second, and that lack of trust gives me a good portion of the small stress that I experience on a vacation like this (which is otherwise comprised of almost entirely joy and at worst type 2 fun!)
 <p>
-Woke up a bit early to swap my batteries as full charge seemed essential for today's longer ride with tons o climbing.  But, the battery and charger were not where I'd left them!  Without the battery (bike has two, but this is the primary one), my ride has no power.  Without the charger, I am also stuck with a very heavy bike that has too few gears and Jeff cruising along at a pace far higher than I can maintain on any bike...well, there's most of the rest of the stress I haven't been having on the trip so far.  I hadn't worn my glasses for this first pass hunt so I went back to the tent to get them, and confirmed that the battery was nowhere in the room I'd left it.  Not yet freaking out, I went to see if Jeff was up and there they were sitting out on the curb (mine, his, the chargers).  Whew!  I found another outlet and swapped it over and got the charging started and then sat for a moment looking into the hills trying to find my calm again.  Fortunately it was still before 7am so there would be time for the other battery to charge, and for my zen to return.  I read for an hour or so before I saw signs that the rest of the world was waking and went looking for breakfast and/or Jeff, and found both in the dining room.
+Woke up a bit early to swap my batteries as full charge seemed essential for today's longer ride with tons o climbing.  But, the battery and charger were not where I'd left them!  Without the battery (bike has two, but this is the primary one), my ride has no power.  Without the charger, I am also stuck with a very heavy bike that has too few gears and trying to accompany Jeff who'll be cruising along at a pace far higher than I can maintain on any bike.  Aha, there's most of the rest of the stress I haven't been having on the trip so far.  Not giving up though soundly worried, since I hadn't worn my glasses for this first pass hunt, I went back to the tent to get them, and then confirmed that the battery was nowhere in the room I'd left it.  Not yet quite freaking out, I went to see if Jeff was up and there the batterie and charger were, sitting out on the curb across a parking lot from the building we'd left them in.  Whew!  I found another outlet and swapped it over and got the secondary battery's charging started, and then sat for a moment looking into the hills trying to find my calm again.  Fortunately, all of this had happened before 7am - so there would be time for the other battery to charge, and for my zen to return.  I read for an hour or so before I saw signs that the rest of the world was waking and went looking for breakfast and/or Jeff, and found both in the dining room.
 <p>
-Ate some bread and cold cuts, cereal and yogurt, tea and orange drink.  Then the owner came and saw me snacking so, and suggested bacon and eggs and I gratefully accepted (it had been a buffet so I sampled everything but there was no hot food), and got my protein on.
+Jeff had talked up the buffet and I was pretty excited after the great food the night before, but it was pretty limited fare.  I ate some bread and cold cuts, cereal and yogurt, tea and orange drink.  Supposedly there was more of a setup in the other building (where the batteries had vanished from) but since I'd already started eating I felt uncomfortable getting up and moving to another dining room, so resigned myself to just (hearty) snacks for breakfast.  But then the owner came out and saw me snacking, and suggested bacon and eggs which I gratefully accepted (it had been a "buffet" so I sampled everything out there - but there was no hot food).  He called a chef aside to tell him to make me such, and I got my protein on.
 <p>
-Jeff and I headed back to the tent zone to pack up, which included quite a bit of tent drying since it had been dewy and damp (though not rainy), and we got packed up at about the same time.  Fortunately my battery had finally finished charging and so we were ready to roll!  Said our goodbyes to hotel owner Simon and got a picture with him, before we rolled almost directly into Croatia as our route started in that direction.
+<a href=https://q42.me/trips/slovenia/day5-goodbyes.jpg><img src=https://q42.me/trips/slovenia/day5-goodbyes-small.jpg></a>
 <p>
-Croatia felt almost identical to Slovenia to me, but we were only there for maybe 10 miles today (crossed a bit back and forth to start with), and took a large climb up to Castle Sneznik where I had just missed a tour time, so just regrouped with Jeff before heading into the second large climb - this one on gravel roads in a forest!
+<i>Us and Simon</i>
+<p>
+Then, Jeff and I headed back to the tent zone to pack up, which included quite a bit of tent drying since it had been dewy and damp (though not rainy), and we got packed up at about the same time.  Fortunately my battery had finally finished charging and so we were ready to roll!  Said our goodbyes to hotel owner Simon and got a picture with him, before we rolled almost directly into Croatia as our route started in that direction.
+<p>
+<a href=https://q42.me/trips/slovenia/day5-croatia.jpg><img src=https://q42.me/trips/slovenia/day5-croatia-small.jpg></a>
+<p>
+<i>This is how Croatians spell Croatia</i>
+<p>
+<a href=https://q42.me/trips/slovenia/day5-castle.jpg><img src=https://q42.me/trips/slovenia/day5-castle-small.jpg>
+<p>
+<i>Castle Sneznik.</i>
+<p>
+Croatia felt almost identical to Slovenia to me, but we were only there for maybe 10 miles today (crossed a bit back and forth to start with), and took a large climb up to Castle Sneznik (it's fun to say out loud) where I had just missed a tour time. So I just regrouped with Jeff before heading into the second large climb - this one on gravel roads in a forest!
+<p>
+<a href=https://q42.me/trips/slovenia/day5-countryside.jpg><img src=https://q42.me/trips/slovenia/day5-countryside-small.jpg></a>
 <p>
 Found the last bit of my stress in the forest since Jeff had sent me a route - but it turned out not to be the route he planned to take.  There were all kinds of roads through the forest and no cell reception and I didn't feel super comfortable deviating from the route that I had faithfully downloaded and confirmed that others had ridden in the past 30 days, and I "won" the first debate to keep us on route but he just took off his own way at the second junction of question and so I followed unhappily and hoped he knew what he was doing to get us through the woods - this was a couple thousand feet of climbing and the middle of nowhere.  It would be hard to get rescued, or even get our bodies found, if some kinda tragedy struck.  I had to remind myself of my mantra, everything works if you let it, and just go along even though I was uncomfortable.
 <p>
 The riding however was fantastic!  Very well maintained roads, absolutely no other traffic, felt like a better version of Lief Erikson - my favorite 11 mile carfree wooded gravel road in Portland.  If not for the pretty incredible elevation gain, I could see myself just making a day or two of crisscrossing the forest there, but it was definitely a lot of up and down and no real resupply stops.  Would be a cute 200k to do up in there though; maybe someday.
 <p>
-We descended by following Jeff's route ("well we didn't go the way I wanted after all you made us go your way at first!") down into Masun, where there was a fun/funny wild game restaurant and not much else.  We had a pretty good lunch there though, before doing a couple hundred feet more up before an absolutely amazing, tremendous, bomb into town.  Unlike yesterday's bomb which was too steep to really let go on, this one was perfect to swoop down at a steady 40mph or so for probably 15 minutes straight.  That's one I hope I get to do again someday!
+<a href=https://q42.me/trips/slovenia/day5-chainsaw.jpg><img src=https://q42.me/trips/slovenia/day5-chainsaw-small.jpg></a>
 <p>
-Then we wove our way through some towns to the campground where we had many beers, weathered some light rain, had very filling dinner from the kitchen, did laundry, and charged all the things.  Now I'll probably veg out and watch some videos before I fall asleep, just want some alone time since I've been pretty nonstop with super-gregarious Jeff for most of the last week and introvert needs some time off...
+<i>Roadside art at the lunchplace</i>
+<p>
+<a href=https://q42.me/trips/slovenia/day5-lunch.jpg><img src=https://q42.me/trips/slovenia/day5-lunch-small.jpg></a>
+<p>
+<i>Lunch at the lunchplace.  Mushroom Carved Potato!!</i>
+<p>
+We descended into the lunch stop by following Jeff's route ("well we didn't go the way I wanted after all you made us go your way at first!") down into Masun, where there was a fun/funny wild game restaurant and not much else.  We had a pretty dang good (if rather slow) lunch there, though, before doing a couple hundred feet more of climbing with full bellies...before an absolutely amazing, tremendous, huge bomb into town.  Unlike yesterday's bomb which was too steep to really let go fully of the brakes on, this one was perfect to swoop down at a steady 40mph or so for probably 15 minutes straight.  That's one I hope I get to do again someday!
+<p>
+<a href=https://q42.me/trips/slovenia/day5-birthday.jpg><img src=https://q42.me/trips/slovenia/day5-birthday-small.jpg></a>
+<p>
+<i>There were these weird birthday trees set up all over...someone...related to cars...turned 40, here</i>
+<p>
+<a href=https://q42.me/trips/slovenia/day5-campbeer.jpg><img src=https://q42.me/trips/slovenia/day5-campbeer-small.jpg></a>
+<p>
+Then we wove our way through some towns, to the campground, where we: had many beers, weathered some light rain, had very filling dinner from the kitchen, did laundry, and charged all the things.  Now I'll probably veg out and watch some videos before I fall asleep; just want some alone time since I've been pretty nonstop with super-gregarious Jeff for most of the last week and introvert needs some time off...
 <p>
     </div>
 
