--- a/src/pages/slovenia/sday5.astro
+++ b/src/pages/slovenia/sday5.astro
@@ -41,7 +41,7 @@ Then, Jeff and I headed back to the tent zone to pack up, which included quite a
 <p>
 <i>This is how Croatians spell Croatia</i>
 <p>
-<a href=https://q42.me/trips/slovenia/day5-castle.jpg><img src=https://q42.me/trips/slovenia/day5-castle-small.jpg>
+<a href=https://q42.me/trips/slovenia/day5-castle.jpg><img src=https://q42.me/trips/slovenia/day5-castle-small.jpg></a>
 <p>
 <i>Castle Sneznik.</i>
 <p>
