--- a/src/pages/slovenia/sday6.astro
+++ b/src/pages/slovenia/sday6.astro
@@ -24,8 +24,11 @@ Difficulty: medium-low
 <br>
 <a href=https://www.strava.com/activities/14455415405>Link to workout in Strava</a>
 <hr>
-<a href="https://photos.app.goo.gl/n64phYFmB4n9dg3Y6">Link to photo gallery from this trip</a> - sorry, I won't be able to link individual photos in these posts!
-<hr>
+<p>
+<a href=https://q42.me/trips/slovenia/day6-campsunrise.jpg><img src=https://q42.me/trips/day6-campsunrise-small.jpg></a>
+<p>
+<i>Sunrise mist at camp</i>
+<p>
 <p>
 Had quite a filling dinner and a few beers at the campsite, after chatting a bit with a couple of touring Spanish women who were camped near us and were finishing up a 2 week tour.  They traveled rather lighter than us! Turned in a little early post-laundry and after shaving, as I was tired and oversocialized.
 <p>
@@ -33,11 +36,27 @@ Woke once in the night to some rain, but woke up in the morning mostly dry.  Onl
 <p>
 Got a chance to get all my devices charged and had a nap on the train, and then as promised we got to the bus and they would not take our bikes (nor did we really want to unload them), so we rode out of town and into the next small town where I grabbed some lunch and we ate with some French touring cyclists who Jeff gave some advice to about Albania, one of his favorite countries to visit.  We ate quickly amidst gathering dark clouds, and headed down the valley soon after.
 <p>
+<a href=https://q42.me/trips/slovenia/day6-nocrash.jpg><img src=https://q42.me/trips/day6-nocrash-small.jpg></a>
+<p>
+<a href=https://q42.me/trips/slovenia/day6-riding.jpg><img src=https://q42.me/trips/day6-riding-small.jpg></a>
+<p>
 Ended up doing about 6 miles on a medium-busy highway with no shoulder, but it was doable on the e-bikes.  I'm not sure I would enjoy it on my analog bike, but as we sat at the turn off - highway, or bike route - a German touring couple came down from the bike route and warned us away - "very steep, we had to carry bags and bikes separately because it was too technical" and they had fatter tires than we did.  With this advice in hand we opted for the highway which was scenic but also had a medium amount of traffic.  Only got honked at once and had only a couple uncomfortable passes since the road was twisty and Jeff tries very hard to control traffic with hand signals and this works much of the time....
 <p>
-Turned off the highway near Tilman onto the designated-bike-route street which was smooth sailing all the way into Kobarid.  It did finally start raining on us but stopped short of soaking us and we had a few miles to dry out before we got to the campground and set up camp in the sprinkles.
+<a href=https://q42.me/trips/slovenia/day6-river.jpg><img src=https://q42.me/trips/day6-river-small.jpg></a>
+<p>
+<i>Glacial stream!</i>
+<p>
+Turned off the highway near Tilman onto the designated-bike-route street, which was smooth sailing all the way into Kobarid.  Right at camp we crossed (again) this bright blue glacial river that carved out the valley.  It did finally start raining on us for a few miles - but stopped short of soaking us - and we even had a few miles at the end to dry out before we got to the campground, and set up camp in the sprinkles.  There were a total of maybe 4 groups at the campground, so it was pretty empty and chill.
+<p>
+<a href=https://q42.me/trips/slovenia/day6-typicalalley.jpg><img src=https://q42.me/trips/day6-typicalalley-small.jpg></a>
+<p>
+<i>Kobarid main street</i>
 <p>
 Had a beer and some ice cream while Jeff chatted with the campground owner and I typed this up.  Now to head into town for a little tourism (museum!), sitting at a cafe and watching the town go by, before a nice(r) dinner at a place Jeff likes.
+<p>
+<a href=https://q42.me/trips/slovenia/day6-dinner.jpg><img src=https://q42.me/trips/day6-dinner-small.jpg></a>
+<p>
+<i>Dessert!</i>
 <p>
     </div>
 
