--- a/src/pages/slovenia/sday6.astro
+++ b/src/pages/slovenia/sday6.astro
@@ -34,23 +34,23 @@ Had quite a filling dinner and a few beers at the campsite, after chatting a bit
 <p>
 Woke once in the night to some rain, but woke up in the morning mostly dry.  Only my pushed-aside sleep sheet was very damp, so I hung it in a tree as I watched the sunrise.  Dried off the tent and was all packed up by 7:15 or so since our plan was to head into town around 8 to get breakfast and catch a 9:30 train.  We were at the station in time for the 8:30 train so we took that instead.  The conductor warned us as we bought tickets that we were unlikely to get to our destination since the connecting train had a bus shuttle for the last part of our route, but we decided we'd give it a try and if needed we could ride from Anhovo, about 10 miles shy of our planned detraining.
 <p>
-Got a chance to get all my devices charged and had a nap on the train, and then as promised we got to the bus and they would not take our bikes (nor did we really want to unload them), so we rode out of town and into the next small town where I grabbed some lunch and we ate with some French touring cyclists who Jeff gave some advice to about Albania, one of his favorite countries to visit.  We ate quickly amidst gathering dark clouds, and headed down the valley soon after.
+Got a chance to get all my devices charged and had a nap on the train, and then as promised we got to the bus and they would not take our bikes (nor did we really want to unload them which would have been necessary to get them underneath into the baggage area), so we rode out of town and into the next small town (our intended train stop) where I grabbed some lunch and we ate with some French touring cyclists to whom Jeff gave some advice to about Albania, which I'd hear repeatedly is one of his favorite countries to visit.  We ate our pastries quickly amidst gathering dark clouds, and headed down the valley soon after.
 <p>
 <a href=https://q42.me/trips/slovenia/day6-nocrash.jpg><img src=https://q42.me/trips/slovenia/day6-nocrash-small.jpg></a>
 <p>
 <a href=https://q42.me/trips/slovenia/day6-riding.jpg><img src=https://q42.me/trips/slovenia/day6-riding-small.jpg></a>
 <p>
-Ended up doing about 6 miles on a medium-busy highway with no shoulder, but it was doable on the e-bikes.  I'm not sure I would enjoy it on my analog bike, but as we sat at the turn off - highway, or bike route - a German touring couple came down from the bike route and warned us away - "very steep, we had to carry bags and bikes separately because it was too technical" and they had fatter tires than we did.  With this advice in hand we opted for the highway which was scenic but also had a medium amount of traffic.  Only got honked at once and had only a couple uncomfortable passes since the road was twisty and Jeff tries very hard to control traffic with hand signals and this works much of the time....
+Ended up doing about 6 miles on a medium-busy highway with no shoulder, but it was doable on the e-bikes.  I'm not sure I would enjoy it on my analog bike, but as we sat at the turn off - highway, or bike route - a German touring couple came down from the bike route (which looked like a poorly maintained 1 lane gravel road where we were standing - and warned us away!  "It's very steep, we had to carry bags and bikes separately because it was too technical to even walk down loaded" - and they had fatter tires than we did.  With this advice in hand we opted for the highway which was scenic but also had a medium amount of traffic.  Only got honked at once and had only a couple uncomfortable passes since the road was twisty and Jeff tries very hard to control traffic with hand signals and this works much of the time.
 <p>
 <a href=https://q42.me/trips/slovenia/day6-river.jpg><img src=https://q42.me/trips/slovenia/day6-river-small.jpg></a>
 <p>
 <i>Glacial stream!</i>
 <p>
-Turned off the highway near Tilman onto the designated-bike-route street, which was smooth sailing all the way into Kobarid.  Right at camp we crossed (again) this bright blue glacial river that carved out the valley.  It did finally start raining on us for a few miles - but stopped short of soaking us - and we even had a few miles at the end to dry out before we got to the campground, and set up camp in the sprinkles.  There were a total of maybe 4 groups at the campground, so it was pretty empty and chill.
+Turned off the highway near Tilman onto the designated-bike-route paved country road, which was smooth sailing all the way into Kobarid.  Right at camp we crossed (again) this bright blue glacial river that had carved out the valley we were riding down.  Those dark clouds did finally start raining on us for a few miles - but stopped short of soaking us (we put on rain gear right as it stopped raining, naturally, in a convenient bus stop shelter) - and we even had a few miles at the end to dry out from the breeze before we got to the campground.  We set up camp in the sprinkles.  There were a total of maybe 4 groups at the campground, so it was pretty empty and chill.
 <p>
 <a href=https://q42.me/trips/slovenia/day6-typicalalley.jpg><img src=https://q42.me/trips/slovenia/day6-typicalalley-small.jpg></a>
 <p>
-<i>Kobarid main street</i>
+<i>Kobarid main street?</i>
 <p>
 Had a beer and some ice cream while Jeff chatted with the campground owner and I typed this up.  Now to head into town for a little tourism (museum!), sitting at a cafe and watching the town go by, before a nice(r) dinner at a place Jeff likes.
 <p>
