--- a/src/pages/slovenia/sday7.astro
+++ b/src/pages/slovenia/sday7.astro
@@ -25,16 +25,26 @@ Difficulty: medium low
 <br>
 <a href=https://www.strava.com/activities/14465736093>Link to workout in Strava</a>
 <hr>
-<a href="https://photos.app.goo.gl/n64phYFmB4n9dg3Y6">Link to photo gallery from this trip</a> - sorry, I won't be able to link individual photos in these posts!
-<hr>
 <p>
-Noticed this morning that I'd worn though a second pair of pants in the same spot as the first.  Guess this saddle hits me rather different than my own!  Down to jeans and shorts without holes, which is kinda a bummer since that's both pairs of "might rain" pants I like to wear while biking...but I can probably still ride a day or two in the holy pants perhaps at the expense of wearing a hole in my undies too?  I already have a hole in my butt (bad joke). Love both pairs of pants so hoping I can get them repaired back in Portland. 
+<a href=https://q42.me/trips/slovenia/day7-pano.jpg><img src=https://q42.me/trips/slovenia/day7-pano-small.jpg></a>
+<p>
+Noticed this morning that I'd worn though a second pair of pants in the same spot as the first.  Guess this saddle hits me rather different than my own!  I guess I'm down to only jeans and shorts without holes, which is kinda a bummer since that's both pairs of "might rain" pants I like to wear while biking worn out...but I can probably still ride a day or two in the holy pants - perhaps at the expense of wearing a hole in my undies too?  I already have a hole in my butt (bad joke). Love both pairs of pants so hoping I can get them repaired back in Portland. 
 <p>
 Last night I had a brief WW1 museum visit & then we did a mini bar crawl (both bars in town carried one microbrew that we wanted to sample, so we did), and finally ended at an amazing dinner at the second most expensive restaurant in town.  My crowning achievement was buying us both desserts, which we enjoyed substantially.  Got back to camp and had one more beer &  had a long phone call with a friend who needed advice then conked out quickly. 
 <p>
+<a href=https://q42.me/trips/slovenia/day7-hikefalls.jpg><img src=https://q42.me/trips/slovenia/day7-hikefalls-small.jpg></a>
+<a href=https://q42.me/trips/slovenia/day7-hiketrail.jpg><img src=https://q42.me/trips/slovenia/day7-hiketrail-small.jpg></a>
+<a href=https://q42.me/trips/slovenia/day7-slimer.jpg><img src=https://q42.me/trips/slovenia/day7-slimer-small.jpg></a>
+<p>
 Woke early to hang tent to dry and had oatmeal for breakfast...today marks the first time Jeff took out the stove all trip long (we'd cooked in the restaurant kitchen our two nights at Bloke)!  I was up early to take a gorgeous gorge hike - very reminiscent of Oneonta gorge back near Portland, which is sadly closed indefinitely now.  Also saw some historic WW1 trenches that were along the hike-way.  Took some pictures of it if you want to see more...
 <p>
+<a href=https://q42.me/trips/slovenia/day7-riding.jpg><img src=https://q42.me/trips/slovenia/day7-riding-small.jpg></a>
+<p>
 Our bike ride was a relateively short day though the mountains to Bovec, which we set out on moderately late (post hike, post packing up) after picking up some focaccia sandwiches for lunch.  The ride was through a mountain valley next to this amazingly blue river - looks glacier fed to me though I haven't done any research to substantiate this.  While the road was a little fast, it wasn't busy, and some construction zones of one-way traffic meant that for the most part, traffic came in waves rather than constantly, which is a bit easier to anticipate/handle.
+<p>
+<a href=https://q42.me/trips/slovenia/day7-lunchstop.jpg><img src=https://q42.me/trips/slovenia/day7-lunchstop-small.jpg></a>
+<p>
+<i>Lunch stop</i>
 <p>
 We pulled off in a scenic spot - there are many picnic tables along this scenic route - and ate our sandwiches with a million dollar view.  Also peed with a million dollar view, which is always quite satisfying.
 <p>
