--- a/src/pages/slovenia/sday8.astro
+++ b/src/pages/slovenia/sday8.astro
@@ -24,29 +24,44 @@ Difficulty: medium
 <br>
 <a href="https://www.strava.com/activities/14478129651">Link to workout in Strava</a>
 <hr>
-<a href="https://photos.app.goo.gl/n64phYFmB4n9dg3Y6">Link to photo gallery from this trip</a> - sorry, I won't be able to link individual photos in these posts!
-<hr>
 <p>
-
-Woke early and had an oatmeal breakfast at camp, featuring me on KP duty and pitting cherries galore to add to the oats.  As we packed up, I left my pannier in an ant pile, so ants joined the packing party and I was still finding some as I unpacked this evening.  Maybe I'll find more tomorrow!  (not tragic numbers).
+<a href=https://q42.me/trips/slovenia/day8-ride3.jpg><img src=https://q42.me/trips/slovenia/day8-ride3-small.jpg></a>
+<a href=https://q42.me/trips/slovenia/day8-ride4.jpg><img src=https://q42.me/trips/slovenia/day8-ride4-small.jpg></a>
+<p>
+Woke early and had an oatmeal breakfast at camp, featuring me on KP duty and pitting cherries galore to add to the oats.  As we packed up, I left my pannier in an ant pile, so ants joined the packing party and I was still finding some as I unpacked this evening (just a few, nothing tragic).  Maybe I'll find more tomorrow! 
 <p>
 Got a pretty quick start but realized as we prepared to set out that I had forgotten to finish recording my route last night and thus the Garmin was at 0% battery.  Fortunately the e-bike has a USB port on the speedometer and I ran a cable over to charge it up as we rode, but didn't have today's route in the planner anyway so it was just recording, not guiding.  But Jeff knew where we were going and as usual around here there's typically only one road so we just followed it.
 <p>
-Rode past town and immediately climbed 2400 or so feet up to Perdel pass.  As we rode, we passed several other touring cyclists going up/down, including one couple who was pushing their (analog) bikes up a steep part, and they seemed to be having a reasonable time of it and caught up with when I stopped at the top to dork around with my Garmin and take some pictures.
+Rode past town and immediately climbed 2400 or so feet up to <a href="https://en.wikipedia.org/wiki/Predil_Pass">Predel pass</a>.  As we rode, we passed several other touring cyclists going up/down, including one couple who was pushing their (analog) bikes up a steep part, and they seemed to be having a reasonable time of it and they caught up with me a few minutes after I passed them, when I stopped at the top to dork around with my Garmin and take some pictures like this one:
+<p>
+<a href=https://q42.me/trips/slovenia/day8-memorial.jpg><img src=https://q42.me/trips/slovenia/day8-memorial-small.jpg></a>
+<p>
+<i>war memorial from 1809 atop this pass.</i>
 <p>
 I tried using e-assist as little as possible for most of the day both to get a workout and simulate climb on (lighter) non-ebike as I scheme to bring Lori back here soon for a recap of this ride, which has been freaking gorgeous and remarkably low traffic even when the route isn't really a bike route/is basically an international highway.
 <p>
-Bombed down from the top of the pass directly into Italy where architecture was noticeably different, also richer cars on the road!  I didn't get any pictures but you can see some of the interesting less-traditional architecture
-on <a href="https://beweb.chiesacattolica.it">the website beweb.chiesacattlica.it</a>.  Since Jeff had dropped me on the climb and had been noncommittal about where we'd meet after, I cruised the Italian town of Travisio, but no Jeff in evidence, so I wandered on out of town as I started to hunger.
+<a href=https://q42.me/trips/slovenia/day8-italy.jpg><img src=https://q42.me/trips/slovenia/day8-italy-small.jpg></a>
 <p>
-Ended up on what I am pretty sure is the EU equivalent of a rail trail to the town of Kranjska Gora where we had a hearty, gutbusting lunch with 2 desserts since they had prepared ice cream for 50 kids and ended up with 10 too many and naturally Jeff had made friends with the waiter already...
+Bombed down from the top of the pass directly into Italy where architecture was noticeably different, also richer cars on the road!  I didn't get any pictures but you can see some of the interesting less-traditional architecture on <a href="https://beweb.chiesacattolica.it">the website beweb.chiesacattlica.it</a>.  Since Jeff had dropped me on the climb and had been noncommittal about where we'd meet after, I cruised through the Italian town of Travisio, but found no obvious Jeff in evidence, so I wandered on out of town as I started to hunger.
 <p>
-After lunch, there was more rail trail, and I used literally no e-assist for 10+ mi (of course, it was mostly downhill - this bike is heavy AF even without all the baggage on it).  But then we finally turned off the trail and onto a steep climb up to a smaller pass that took all the juice!  We will have to push analog bikes for a few minutes if we (try to) ride that way.  It was a pretty short climb though, so we bombed down, had beer at one 'Psnak Cafe' and chatted with other cyclists, as many were stopped there.  The most interesting were Canadian, had Pinion-gearbox bikes and nice matchy anodized parts and brooks saddles - reminded me of my touring bike which I miss a lot!  We also talked with a 90 year old local who made sure we knew he had climbed the neighboring tallest mountain in Slovenia once upon a time.  He departed with a loud fart.
+<a href=https://q42.me/trips/slovenia/day8-lunch.jpg><img src=https://q42.me/trips/slovenia/day8-lunch-small.jpg></a>
+<p>
+Ended up on what I am pretty sure is the EU equivalent of a rail trail to the town of Kranjska Gora, and spied Jeff's bike outside a cafe where we had a hearty, gutbusting lunch with 2 desserts since they had prepared ice cream for 50 kids and ended up with 10 too many and naturally Jeff had made friends with the waiter already...
+<p>
+<a href=https://q42.me/trips/slovenia/day8-ride1.jpg><img src=https://q42.me/trips/slovenia/day8-ride1-small.jpg></a>
+<a href=https://q42.me/trips/slovenia/day8-ride2.jpg><img src=https://q42.me/trips/slovenia/day8-ride2-small.jpg></a>
+<p>
+After lunch, there was more rail trail, and I used literally no e-assist for 10+ mi (of course, it was mostly downhill - this bike is heavy AF even without all the baggage on it).  But then we finally turned off the trail and onto a steep climb up to a smaller pass that took all the juice!  We will have to push analog bikes for a few minutes if we (try to) ride that way.  It was a pretty short climb though, so we bombed down, had beer at one 'Psnak Cafe' and chatted with other cyclists, since quite a few were stopped there!  The most interesting were Canadian, had Pinion-gearbox bikes and nice matchy anodized parts and brooks saddles - reminded me of my touring bike which I miss a lot!  We also talked with a 90 year old local who made sure we knew he had climbed the neighboring tallest mountain in Slovenia once upon a time.  The old man departed with a loud fart.
+<p>
+<a href=https://q42.me/trips/slovenia/day8-handmemorial.jpg><img src=https://q42.me/trips/slovenia/day8-handmemorial-small.jpg></a>
+<p>
+<i>Memorial to a WW2 slaughter of an entire village - Radovna</i>
+<p>
+<a href=https://q42.me/trips/slovenia/day8-bled.jpg><img src=https://q42.me/trips/slovenia/day8-bled-small.jpg></a>
 <p>
 Finally bombed down into the town of Bled to the hostel and first shower in a couple days.  Jeff then took me on a whirlwind tour around the lake wherein we visited a friend of his in friend's shop, got some lake pictures, visited a garden paradise hotel/restaurant where we had a beer "poolside" next to the cleanest non-chlorinated pool I've ever seen, then looped around the lake back to dinner at a surprisingly good vegan burger place, and finally home to write this up.
 <p>
     </div>
-
 </main>
 <center>You can email me:  gently at gmail.com</center>
 </Layout>
