--- a/src/pages/slovenia/sday9.astro
+++ b/src/pages/slovenia/sday9.astro
@@ -24,18 +24,34 @@ Difficulty: easy (battery-powered)
 <br>
 <a href="https://www.strava.com/activities/14487213707">Link to workout in Strava</a>
 <hr>
-<a href="https://photos.app.goo.gl/n64phYFmB4n9dg3Y6">Link to photo gallery from this trip</a> - sorry, I won't be able to link individual photos in these posts!
-<hr>
 <p>
-jeff convinced me to try a fancy hotel buffet this morning and it was expensive but comprehensive and tasty and deluxe and gutbusting.  I suppose the gutbusting part was by choice, but I wanted to make sure I got my money's worth - it was the cost of 6-7 bakery breakfasts (here the bakery plays the role of the coffee shop that every town has, except they are full of delightful pastries often containing sausage and/or cheese so you can grab a couple and have a good meal out of it.  They usually cost less than 2 for 5 bucks).
+<a href=https://q42.me/trips/slovenia/day9-robo.jpg><img src=https://q42.me/trips/slovenia/day9-robo-small.jpg></a>
 <p>
-After fancy buffet, we packed up and rolled out of the hostel to nearby Radovljica via a scenic but hilly dirt road low traffic route, caught the train to Kranj - only the second or third city I've seen here - where we rode up into the valleys again for about 20 miles.  Today I let my battery carry me and didn't work too hard, largely because Jeff couldn't tell me the route he had in mind so I just had to keep up with him.  I don't love that was much as following a route myself at my own pace, riding like I want to rather than zoom-zoom, though it was fun and scenic enough, just not much of a workout.
+<i>There was more than one robo-waiter at this buffet.  They did very little.</i>
+<p>
+Jeff convinced me to try a fancy hotel buffet this morning and it was expensive but comprehensive and tasty and deluxe and gutbusting.  I suppose the gutbusting part was by choice, but I wanted to make sure I got my money's worth since it was the cost of 6-7 bakery breakfasts (here the bakery plays the role of the coffee shop that every town has, except they are routinely full of a dozen+ types of delightful pastries often containing sausage and/or cheese so you can grab a couple and have a good meal out of it.  They usually cost less than 2 for 5 bucks).  At the buffet there were dozens of staff working the place and the linens were very white.  I had some of almost everything at the 2 buffets, and probably 5 drinks since they had a lot of great fruit juice.
+<p>
+<a href=https://q42.me/trips/slovenia/day9-alps1.jpg><img src=https://q42.me/trips/slovenia/day9-alps1-small.jpg></a>
+<p>
+After waddling home from the fancy buffet, we packed up and rolled out of the hostel to nearby Radovljica via a scenic but hilly dirt road low traffic route.  Another Jeff-had-found-this-before special; this one didn't happen to feature heavily on the heatmaps but it was direct and pleasant.  At the end of it, we found a trainstation and caught the train to Kranj - only the second or third city I've seen here. Once decanting, we rode up into the valleys again for about 20 miles.  Today I let my battery carry me and didn't work too hard, largely because Jeff couldn't tell me the route he had in mind so I just had to keep up with him.  I don't love that as much as following a route myself at my own pace, riding like I want to rather than only-zoom-zoom.  Sure, I often zoom-zoom even on my own without an agenda, but I guess it's more satisfying since I only get speed by pedalling, usually.  At the end, today was fun and scenic enough, just not much of a workout.
+<p>
+<a href=https://q42.me/trips/slovenia/day9-alley.jpg><img src=https://q42.me/trips/slovenia/day9-alley-small.jpg></a>
 <p>
 We were coming out of the city of Kranj for at least 5 miles, suburbs were uniformly cute!  Then we got onto the low traffic valley road and just climbed and climbed, 2000 feet or so, up to Jezersko, with the last part being especially steep as we came into/through town.  Stopped at a market for a beer and a pastry to enjoy with the salmon bagel sandwiches we had picked up from a bbq restaurant (they have great non-bbq breakfast, apparently); we ate by the lake in Jezersko.
 <p>
-Then up to the campground just above town which is quite nice, a bit of a working farm though the owners - friends of Jeff's, of course - are out of town so we are just normal campers and not long lost friends, here.  We have some dinner plans with some friends of Jeff's though!
+<a href=https://q42.me/trips/slovenia/day9-lunch.jpg><img src=https://q42.me/trips/slovenia/day9-lunch-small.jpg></a>
+<p>
+<i>Radlers were near-omnipresent in every beer selection, and we were drinking fairly regularly, so it was nice to have a low-proof something to gulp</i>
+<p>
+Then we continued up to a campground just above town which is quite nice. It's on a working farm, which Jeff discovered (?) by meeting the owners - they are friends of Jeff's, of course. Since they are out of town, though,  we are just normal campers and not long lost friends, for our stay.  We have some dinner plans with some friends of Jeff's though!
+<p>
+<a href=https://q42.me/trips/slovenia/day9-alps2.jpg><img src=https://q42.me/trips/slovenia/day9-alps2-small.jpg></a>
+<p>
+<i>view from the campground</i>
 <p>
 Tomorrow is a shortish but day but steep again.  Yeehaw!
+<p>
+<a href=https://q42.me/trips/slovenia/day9-alpselfie.jpg><img src=https://q42.me/trips/slovenia/day9-alpselfie-small.jpg></a>
 <p>
     </div>
 
